# xpar

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  blake2b-avx2.c  blake2b-impl.h  blake2b-sse41.c  blake2b.c  blake2b.h  bootstrap  cmode.c  cmode.h  common.h  configure.ac  crc32c.c  crc32c.h  host-djgpp.c  host-posix.c  host-win32.c  io_uring_host.c  io_uring_host.h  jmode.c  jmode.h  lmode-avx2.c  lmode-impl.h  lmode-scalar.c  lmode-ssse3.c  lmode.c  lmode.h  platform.c  platform.h  sharding.h  smode.c  threadpool.c  vmode.c  vmode.h  xpar-aarch64.S  xpar-x86_64.asm  (+3 more)
.github/workflows/: build.yml  release.yml
contrib/: inject-errors.c  xpar-torture
contrib/dos/: dosbox-x.conf
